--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "@web3-react/walletconnect-connector": "^6.1.1",
     "@web3-react/walletlink-connector": "^6.0.9",
     "ajv": "^6.12.6",
-    "floki-uikit": "0.0.1-alpha.1",
     "cids": "^1.1.6",
     "copy-to-clipboard": "^3.2.0",
     "dotenv": "^8.2.0",
     "ethers": "^5.3.0",
+    "floki-uikit": "^0.0.1-alpha.2",
     "i18next": "^15.0.9",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-xhr-backend": "^2.0.1",
